Added another comparison to the report, Jackson.  It is not a dependency of json-io; used during testing for comparison.